# py-auth-serverside

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
protos/: refresh.proto
protos/google/protobuf/: empty.proto
src/tp_auth_serverside/: __init__.py  config.py
src/tp_auth_serverside/auth/: auth_validator.py  custom_auth_scheme.py  requestor.py  schemas.py  user_specs.py
src/tp_auth_serverside/core/: fastapi_configurer.py
src/tp_auth_serverside/core/handler/: authentication_handler.py  refresh_handler.py
src/tp_auth_serverside/db/memorydb/: __init__.py  login.py  refresh.py
src/tp_auth_serverside/pb/: refresh_pb2.py  refresh_pb2_grpc.py
src/tp_auth_serverside/utilities/: jwt_util.py
